fixed spacing below navbar

--- a/src/Components/HeroSection.css
+++ b/src/Components/HeroSection.css
@@ -1,6 +1,6 @@
 .home__hero-section {
     color: #c6c6c6;
-    padding: 160px 0px;
+    padding: 100px 0px;
 
 }
 
